[gd_scene load_steps=2 format=3 uid="uid://bt6p8mjrdprci"]

[ext_resource type="Script" path="res://village/village_ui/TimeUI.gd" id="1_ux1wt"]

[node name="TimeUI" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -110.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 90.0
grow_horizontal = 0
script = ExtResource("1_ux1wt")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_top = 10.0
offset_right = 45.0
offset_bottom = 36.0
grow_horizontal = 2
text = "06:00"
horizontal_alignment = 1

[node name="DayLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -13.0
offset_right = 45.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "GÃ¼n 1"
horizontal_alignment = 1

[node name="PeriodLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -26.0
offset_right = 45.0
grow_horizontal = 2
grow_vertical = 0
text = "Sabah"
horizontal_alignment = 1
